--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <HTML>
+<script type="text/javascript" src="http://github.com/jashkenas/coffee-script/raw/master/extras/coffee-script.js"></script>
 <script type="text/coffeescript" src="index.coffee"></script>
 </HTML>
